--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Employees#index</h1>
-<p>Find me in app/views/employees/index.html.erb</p>
+<div class="jumbotron middle">
+  <h3 class="inner-heading">Employees</h3>
+  <p>Enter your custom domain here for receiving emails with your custom domain. Please note that in order to receive email from your custom domain you will need to add certain DNS records. If you do not have access to your DNS records you will not be able to use this feature. We recommend that you use a subdomain or a separate domain name than your actual company domain name in order to avoid making changes to your mail settings that will affect you in other areas.</p>
+  <p>
+    <a class="btn btn-primary btn-sm" href="#" role="button"><span><i class="glyphicon glyphicon-plus"></i></span>   Add employee</a>
+  </p>
+</div>
+
+<div class="d-flex p-2 middle message-flex">No employees have been added yet. <a>Click here</a> to upload.</div>
