--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -120,7 +120,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="user-profile-lite.html">
+                <a class="nav-link " href="/employees">
                   <i class="material-icons">person</i>
                   <span>Employees</span>
                 </a>
